# sylpheed-commit-reader

./: .travis.yml  Makefile.am  NEWS  README.md  commitreaderrc  configure.ac
examples/: commitreaderrc
res/: comment_edit.xpm  version.rc
src/: Makefile.am  commit_reader.c  commit_reader.h  copying.h
